--- a/announcements.html
+++ b/announcements.html
@@ -28,17 +28,17 @@
 <meta name="msapplication-TileColor" content="">
 
 <!-- CSS -->
-<link rel="stylesheet" href="./announcements_files/reset.css">
-<link rel="stylesheet" href="./announcements_files/template.css">
-<link rel="stylesheet" href="./announcements_files/style.css">
-<link rel="stylesheet" href="./announcements_files/swiper.min.css">
-<link rel="stylesheet" href="./announcements_files/captcha.css">
+<link rel="stylesheet" href="./popo_css/reset.css">
+<link rel="stylesheet" href="./popo_css/template.css">
+<link rel="stylesheet" href="./popo_css/style.css">
+<link rel="stylesheet" href="./popo_css/swiper.min.css">
+<link rel="stylesheet" href="./popo_css/captcha.css">
 
 <!-- JS -->
-<script type="text/javascript" async="" src="./announcements_files/ga.js.下載"></script><script async="" type="text/javascript" src="./announcements_files/gpt.js.下載"></script><script type="text/javascript" src="./announcements_files/jquery-latest.min.js.下載"></script>
-<script type="text/javascript" src="./announcements_files/menu.js.下載"></script>
-<script type="text/javascript" src="./announcements_files/swiper.min.js.下載"></script>
-<script type="text/javascript" src="./announcements_files/gotop.js.下載"></script>
+<script type="text/javascript" async="" src="./popo_js/ga.js.下載"></script><script async="" type="text/javascript" src="./announcements_files/gpt.js.下載"></script><script type="text/javascript" src="./announcements_files/jquery-latest.min.js.下載"></script>
+<script type="text/javascript" src="./popo_js/menu.js.下載"></script>
+<script type="text/javascript" src="./popo_js/swiper.min.js.下載"></script>
+<script type="text/javascript" src="./popo_js/gotop.js.下載"></script>
 
 <!-- DFP Code Start -->     
 <script type="text/javascript">
@@ -241,27 +241,27 @@ $(document).ready(function(){
   <footer>
     <div class="wrap foot">
         <a href="https://www.popo.tw/index" title="參考網站">
-            <div class="left"><img src="./POPO原創市集_files/icon-foot-author.png" width="88" height="88" alt="參考來源" title="參考來源"></div>
+            <div class="left"><img src="./popo_img/icon-foot-author.png" width="88" height="88" alt="參考來源" title="參考來源"></div>
             <div class="right"><h3>參考來源</h3><p>POPO原創市集</p></div>
         </a>
-        <a href="" title="分工人員">
-            <div class="left"><img src="./POPO原創市集_files/icon-foot-reader.png" width="88" height="88" alt="讀者手冊" title="讀者手冊"></div>
+        <a href="https://www.popo.tw/faq" title="分工人員">
+            <div class="left"><img src="./popo_img/icon-foot-reader.png" width="88" height="88" alt="讀者手冊" title="讀者手冊"></div>
             <div class="right"><h3>分工人員</h3><p>蕭有村 馬資閔 張家維</p></div>
         </a>
-        <a href="" title="我還沒想到">
-            <div class="left"><img src="./POPO原創市集_files/icon-foot-about.png" width="88" height="88" alt="關於原創市集" title="關於原創市集"></div>
-            <div class="right"><h3>footer,header到時候在獨立出來 一起套用就好</h3><p>我還沒想到</p></div>
+        <a href="https://www.popo.tw/about" title="我還沒想到">
+            <div class="left"><img src="./popo_img/icon-foot-about.png" width="88" height="88" alt="關於原創市集" title="關於原創市集"></div>
+            <div class="right"><h3>我還沒想到</h3><p>我還沒想到</p></div>
         </a>
     </div>
-
     <div class="copy-area animate-plus animated" data-animations="fadeIn" data-animation-delay="0s" data-animation-when-visible="true" data-animation-group="_0">
+      
     	
     </div>
 </footer> 
-<a id="gotop" href="https://www.popo.tw/site_notices#top" style="display: none;"></a>
-<script src="./announcements_files/jquery.js.下載"></script>
-<script src="./announcements_files/yii.js.下載"></script>
-<script src="./announcements_files/yii.activeForm.js.下載"></script>
+<a id="gotop" href="" style="display: none;"></a>
+<script src="./popo_js/jquery.js.下載"></script>
+<script src="./popo_js/yii.js.下載"></script>
+<script src="./popo_js/yii.activeForm.js.下載"></script>
 <script>jQuery(function ($) {
 jQuery('#header-search-form').yiiActiveForm([], []);
 });</script>
