--- a/items_example.html
+++ b/items_example.html
@@ -29,19 +29,19 @@
 <meta name="msapplication-TileColor" content="">
 
 <!-- CSS -->
-<link rel="stylesheet" href="./items_example_files/reset.css">
-<link rel="stylesheet" href="./items_example_files/template.css">
-<link rel="stylesheet" href="./items_example_files/style.css">
-<link rel="stylesheet" href="./items_example_files/swiper.min.css">
-<link rel="stylesheet" href="./items_example_files/captcha.css">
+<link rel="stylesheet" href="./popo_css/reset.css">
+<link rel="stylesheet" href="./popo_css/template.css">
+<link rel="stylesheet" href="./popo_css/style.css">
+<link rel="stylesheet" href="./popo_css/swiper.min.css">
+<link rel="stylesheet" href="./popo_css/captcha.css">
 
 <!-- JS -->
-<script type="text/javascript" async="" src="./items_example_files/ga.js.下載"></script><script async="" type="text/javascript" src="./items_example_files/gpt.js.下載"></script><script type="text/javascript" src="./items_example_files/jquery-latest.min.js.下載"></script>
-<script type="text/javascript" src="./items_example_files/menu.js.下載"></script>
-<script type="text/javascript" src="./items_example_files/swiper.min.js.下載"></script>
-<script type="text/javascript" src="./items_example_files/animate-plus.js.下載"></script>
-<script type="text/javascript" src="./items_example_files/gotop.js.下載"></script>
-<script type="text/javascript" src="./items_example_files/rating.js.下載"></script>
+<script type="text/javascript" async="" src="./popo_js/ga.js.下載"></script><script async="" type="text/javascript" src="./items_example_files/gpt.js.下載"></script><script type="text/javascript" src="./items_example_files/jquery-latest.min.js.下載"></script>
+<script type="text/javascript" src="./popo_js/menu.js.下載"></script>
+<script type="text/javascript" src="./popo_js/swiper.min.js.下載"></script>
+<script type="text/javascript" src="./popo_js/animate-plus.js.下載"></script>
+<script type="text/javascript" src="./popo_js/gotop.js.下載"></script>
+<script type="text/javascript" src="./popo_js/rating.js.下載"></script>
 
 <!-- DFP Code Start -->   
 <script type="text/javascript">
@@ -88,7 +88,7 @@
    })();
 </script>
 <!-- SEO 20170809 -->
-<link rel="canonical" href="https://www.popo.tw/books/704203"><script type="application/ld+json">
+<link rel="canonical" href=""><script type="application/ld+json">
 {
   "@context" : "http://schema.org",
   "@type"    : "Book",
@@ -137,7 +137,7 @@
 <div id="menu_back2"></div><header>
  <div class="wrap">
       <a href="./index.html" id="headlogo">
-<img src="../img/icon.png"></a>		
+<img src="./img/icon2.png"></a>		
       <a href="javascript:" id="menu-btn1"></a>
       <a href="javascript:" id="menu-btn2"></a>
  </div>
@@ -182,7 +182,7 @@
             <div class="booksdetail wbox">
         <div class="left">
            <div class="BC ">
-	<img src="./items_example_files/O20200707203924.jpg" title="剛好討厭你" class="cover-b" id="rs">
+	<img src="./img/icon2.png" title="剛好討厭你" class="cover-b" id="rs">
 		
 	</div>		
         </div>
@@ -291,11 +291,11 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1449053966281-0');
         <h3 class="title mb line">留言區<span class="t-gray">(93)</span></h3>
         <div class="comments-box">
 <div id="w0" class="list-view"><div data-key="12741977">          <div class="comments-list reader"><!--讀者回應-->
-            <div class="left"><img src="./items_example_files/O(2).jpg" title="玥玥" alt="玥玥"><a class="member blue" href="">留言者</a></div>
+            <div class="left"><img src="./img/icon-foot-author.png" title="玥玥" alt="玥玥"><a class="member blue" href="">留言者</a></div>
             <div class="right">
             <div class="msg">
             <div class="msg-icon">
-<img src="./items_example_files/icon-pearl.png"><img src="./items_example_files/icon-pearl.png"></div>
+<img src="./img/icon-foot-author.png"><img src="./img/icon-foot-author.png"></div>
             <div class="msg-text"><h4></h4>
             範例留言 等資料庫</div>
             </div>
@@ -394,31 +394,32 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1449053917172-0');
   <footer>
     <div class="wrap foot">
         <a href="https://www.popo.tw/index" title="參考網站">
-            <div class="left"><img src="./POPO原創市集_files/icon-foot-author.png" width="88" height="88" alt="參考來源" title="參考來源"></div>
+            <div class="left"><img src="./popo_img/icon-foot-author.png" width="88" height="88" alt="參考來源" title="參考來源"></div>
             <div class="right"><h3>參考來源</h3><p>POPO原創市集</p></div>
         </a>
         <a href="https://www.popo.tw/faq" title="分工人員">
-            <div class="left"><img src="./POPO原創市集_files/icon-foot-reader.png" width="88" height="88" alt="讀者手冊" title="讀者手冊"></div>
+            <div class="left"><img src="./popo_img/icon-foot-reader.png" width="88" height="88" alt="讀者手冊" title="讀者手冊"></div>
             <div class="right"><h3>分工人員</h3><p>蕭有村 馬資閔 張家維</p></div>
         </a>
         <a href="https://www.popo.tw/about" title="我還沒想到">
-            <div class="left"><img src="./POPO原創市集_files/icon-foot-about.png" width="88" height="88" alt="關於原創市集" title="關於原創市集"></div>
+            <div class="left"><img src="./popo_img/icon-foot-about.png" width="88" height="88" alt="關於原創市集" title="關於原創市集"></div>
             <div class="right"><h3>我還沒想到</h3><p>我還沒想到</p></div>
         </a>
     </div>
-    <!--<div class="copy-area animate-plus" data-animations="fadeIn" data-animation-delay="0s" data-animation-when-visible="true">-->
-    <div class="copy-area animate-plus animated" data-animations="fadeIn" data-animation-delay="0s" data-animation-when-visible="true" data-animation-group="_0">	
+    <div class="copy-area animate-plus animated" data-animations="fadeIn" data-animation-delay="0s" data-animation-when-visible="true" data-animation-group="_0">
+      
+    	
     </div>
 </footer> 
 <a id="gotop" href="https://www.popo.tw/books/704203#top" style="display: none;"></a> 
-<script src="./items_example_files/join.js.下載"></script>
-<script src="./items_example_files/tabs.js.下載"></script> 
-<script src="./items_example_files/bookswiper.js.下載"></script> 
+<script src="./popo_js/join.js.下載"></script>
+<script src="./popo_js/tabs.js.下載"></script> 
+<script src="./popo_js/bookswiper.js.下載"></script> 
 
 
-<script src="./items_example_files/jquery.js.下載"></script>
-<script src="./items_example_files/yii.js.下載"></script>
-<script src="./items_example_files/yii.activeForm.js.下載"></script>
+<script src="./popo_js/jquery.js.下載"></script>
+<script src="./popo_js/yii.js.下載"></script>
+<script src="./popo_js/yii.activeForm.js.下載"></script>
 <script>jQuery(function ($) {
 jQuery('#header-search-form').yiiActiveForm([], []);
 });</script>
