--- a/rank.ver2.html
+++ b/rank.ver2.html
@@ -10,10 +10,10 @@
 
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/template.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/swiper.min.css">
+    <link rel="stylesheet" href="./popo_css/reset.css">
+    <link rel="stylesheet" href="./popo_css/template.css">
+    <link rel="stylesheet" href="./popo_css/style.css">
+    <link rel="stylesheet" href="./popo_css/swiper.min.css">
 
 
 </head>
