--- a/author_area.html
+++ b/author_area.html
@@ -6,11 +6,11 @@
     <title>作家專區 </title>
     <link rel="shortcut icon" href="./img/icon.png">
      <!-- CSS-->
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/rank.css">
-    <link rel="stylesheet" href="./css/template.css">   
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/swiper.min.css">
+    <link rel="stylesheet" href="./popo_css/reset.css">
+    <link rel="stylesheet" href="./popo_css/rank.css">
+    <link rel="stylesheet" href="./popo_css/template.css">   
+    <link rel="stylesheet" href="./popo_css/style.css">
+    <link rel="stylesheet" href="./popo_css/swiper.min.css">
 
    <script src="https://cdn0.popo.tw/web1/js/jquery.tools.min.js"></script>
     <script type="text/javascript" src="https://cdn0.popo.tw/web1/js/swiper.min.js"></script>
